crates/biome_cli/tests/snapshots/main_commands_inspect_config/last_matching_override_wins.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config linter.rules.suspicious.noDebugger --path=file.test.js
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": { "noDebugger": "warn" }
    }
  },
  "overrides": [
    {
      "includes": ["**/*.test.js"],
      "linter": {
        "rules": {
          "suspicious": { "noDebugger": "error" }
        }
      }
    },
    {
      "includes": ["**/*.test.js"],
      "linter": {
        "rules": {
          "suspicious": { "noDebugger": "off" }
        }
      }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:20:41 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key linter.rules.suspicious.noDebugger has the following value.
  
    18 │       "linter": {
    19 │         "rules": {
  > 20 │           "suspicious": { "noDebugger": "off" }
       │                                         ^^^^^
    21 │         }
    22 │       }
  
  i This value is provided by override 1 in the root configuration.
  
  i The override matched file.test.js using **/*.test.js.
  

```
