crates/biome_cli/tests/snapshots/main_commands_inspect_config/later_global_override_replaces_language_value.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config javascript.formatter.lineWidth --path=file.js
```

## `biome.json`

```json
{
  "javascript": { "formatter": { "lineWidth": 120 } },
  "overrides": [
    {
      "includes": ["**/*.js"],
      "formatter": { "lineWidth": 100 }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:6:35 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key javascript.formatter.lineWidth has the following value.
  
    4 │     {
    5 │       "includes": ["**/*.js"],
  > 6 │       "formatter": { "lineWidth": 100 }
      │                                   ^^^
    7 │     }
    8 │   ]
  
  i This value is provided by override 0 in the root configuration.
  
  i The override matched file.js using **/*.js.
  

```
