crates/biome_cli/tests/snapshots/main_commands_inspect_config/later_matching_override_uses_runtime_root_fallback.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter.formatWithErrors --path=file.test.js
```

## `biome.json`

```json
{
  "formatter": { "formatWithErrors": false },
  "overrides": [
    {
      "includes": ["**/*.test.js"],
      "formatter": { "formatWithErrors": true }
    },
    {
      "includes": ["**/*.test.js"],
      "formatter": { "lineWidth": 120 }
    }
  ]
}
```

# Emitted Messages

```block
biome.json:2:38 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.formatWithErrors has the following value.
  
    1 │ {
  > 2 │   "formatter": { "formatWithErrors": false },
      │                                      ^^^^^
    3 │   "overrides": [
    4 │     {
  
  i This value is provided by the root configuration.
  

```
