crates/biome_cli/tests/snapshots/main_commands_inspect_config/malformed_key_is_an_invalid_argument.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter..lineWidth
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Configuration keys must be non-empty dot-separated property names. For example, formatter.lineWidth.
  


```
