crates/biome_cli/tests/snapshots/main_commands_inspect_config/manifest_selected_config_reports_source.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "extends": ["@shared/config/configs/recommended"] }
```

## `node_modules/@shared/config/biome-manifest.json`

```json
{
  "version": 1,
  "configs": [
    { "minimal": "./minimal.json" },
    { "recommended": "./recommended.jsonc" }
  ]
}
```

## `node_modules/@shared/config/minimal.json`

```json
{ "formatter": { "lineWidth": 80 } }
```

## `node_modules/@shared/config/package.json`

```json
{
  "name": "@shared/config",
  "exports": { "biome": "./biome-manifest.json", "default": "./index.js" }
}
```

## `node_modules/@shared/config/recommended.jsonc`

```jsonc
{
  "formatter": {
    "lineWidth": 100,
  },
}
```

# Emitted Messages

```block
node_modules/@shared/config/recommended.jsonc:3:18 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter.lineWidth has the value 100.
  
    1 │ {
    2 │   "formatter": {
  > 3 │     "lineWidth": 100,
      │                  ^^^
    4 │   },
    5 │ }
  
  i This value comes from node_modules/@shared/config/recommended.jsonc, extended by biome.json.
  

```
