crates/biome_cli/tests/snapshots/main_commands_inspect_config/manifest_transitive_reexport_keeps_wrapper_specifier_and_leaf_path.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect config formatter
```

## `biome.json`

```json
{ "extends": ["base.json"] }
```

## `base.json`

```json
{
  "extends": ["@org/wrapper/configs/recommended"],
  "formatter": { "indentWidth": 4 }
}
```

## `node_modules/@org/source/biome-manifest.json`

```json
{ "version": 1, "configs": [{ "recommended": "./recommended.json" }] }
```

## `node_modules/@org/source/package.json`

```json
{
  "name": "@org/source",
  "exports": { "biome": "./biome-manifest.json" }
}
```

## `node_modules/@org/source/recommended.json`

```json
{ "formatter": { "lineWidth": 110 } }
```

## `node_modules/@org/wrapper/biome-manifest.json`

```json
{ "version": 1, "configs": ["@org/source/configs/recommended"] }
```

## `node_modules/@org/wrapper/package.json`

```json
{
  "name": "@org/wrapper",
  "exports": { "biome": "./biome-manifest.json" }
}
```

# Emitted Messages

```block
base.json:3:16 configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The key formatter has the following value.
  
    1 │ {
    2 │   "extends": ["@org/wrapper/configs/recommended"],
  > 3 │   "formatter": { "indentWidth": 4 }
      │                ^^^^^^^^^^^^^^^^^^^^
    4 │ }
  
  i This value is defined across 2 configuration files.
  
  i The highlighted value is configured in node_modules/@org/source/recommended.json, referenced by extends as @org/wrapper/configs/recommended.
  
  > 1 │ { "formatter": { "lineWidth": 110 } }
      │                ^^^^^^^^^^^^^^^^^^^^
  

```
